// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login handles add agent modal 1`] = `
.c7 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c13 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  display: grid;
  grid-template-rows: [title] 50px [description] 1fr;
  padding: 20px;
  min-height: 180px;
}

.c13:hover {
  opacity: 0.90;
}

.c13:focus {
  outline: none;
}

.c13:active {
  opacity: 0.80;
}

.c15 {
  grid-row: title;
  width: 80%;
  margin: 0 auto;
  text-align: center;
}

.c16 {
  grid-row: description;
  padding: 10px;
  font-size: 0.85rem;
}

.c8 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c9 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c10 {
  grid-row: content;
  padding: 20px;
}

.c11 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  margin: 20px 0px 20px 0px;
}

.c12 {
  grid-column: column-one;
  margin-right: 10px;
}

.c17 {
  grid-column: column-two;
  margin-left: 10px;
}

.c14 {
  width: 100%;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

@media (max-width:47.9375em) {
  .c11 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {
  .c12 {
    grid-row: row-one;
    margin-right: 0px;
    margin: 15px;
  }
}

@media (max-width:47.9375em) {
  .c17 {
    grid-column: column-one;
    grid-row: row-two;
    margin-left: 0px;
    margin: 15px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c6"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
  <div
    className="c7"
  >
    <div
      className="c8"
    >
      <h2
        className="c9"
      >
        Add new agent
      </h2>
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <div
            className="c12"
          >
            <button
              className="c13 c14"
              onClick={[Function]}
            >
              <h3
                className="c15"
              >
                Directly on target machine.
              </h3>
              <p
                className="c16"
              >
                You have the correct permissions to download the binary directly on the target machine.
              </p>
            </button>
          </div>
          <div
            className="c17"
          >
            <button
              className="c13 c14"
              onClick={[Function]}
            >
              <h3
                className="c15"
              >
                Manual upload
              </h3>
              <p
                className="c16"
              >
                You download and upload the binary yourself.
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`login handles successful logout 1`] = `
.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c6"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`login render admin link for admins 1`] = `
.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
    <a
      className="c3 c4"
      href="/admin"
      onClick={[Function]}
    >
      Admin
    </a>
  </div>
  <button
    className="c5"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c6"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`login renders correctly 1`] = `
.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  opacity: 0.90;
}

.c0 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin-right: 16px;
}

.c2 {
  grid-column: menu;
}

.c1 {
  grid-column: logo;
}

.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c5 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c5:hover {
  opacity: 0.90;
}

.c5:focus {
  outline: none;
}

.c5:active {
  opacity: 0.80;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Apollo
  </div>
  <div
    className="c2"
  >
    <a
      className="c3 c4"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="c5"
    id="newAgentButton"
    onClick={[Function]}
  >
    Add new agent
  </button>
  <button
    className="c6"
    id="logoutButton"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;
